--- a/MasterThesis/abstract.tex
+++ b/MasterThesis/abstract.tex
@@ -1,6 +1,6 @@
 \begin{abstract}
 \textit{
-This thesis deals with problem in integrating semantic licensing from Data Licenses Clearance Center (DALICC) library into smart contract and semantic representation of deployment environment of such smart contract. For this purpose, we divide this research 
-into four sections: first, we focused on how smart contracts build up on the blockchain and some more details about this system. Second, we demonstrate how blockchain can be integrated with semantic web technology. It is focused on some solutions for indexing and executing smart contracts on the Ethereum blockchain. And the third section is focused on DALICC as a framework that helps to detect license conflict and reduce the costs of rights clearance. And in the last section, we built up DApp to integrate semantic licenses with contents using smart contract and represent semantic model of these deployments.
+This thesis deals with the problem of integrating semantic licensing from the Data Licenses Clearance Center (DALICC) library into a smart contract and semantic representation of the deployment environment of such a smart contract. For this purpose, we divide this research 
+into four sections: first, we focused on how smart contracts build up on the blockchain and some more details about this system. Second, we demonstrate how blockchain can be integrated with semantic web technology. It is focused on some solutions for indexing and executing smart contracts on the Ethereum blockchain. And the third section is focused on DALICC as a framework that helps to detect license conflict and reduce the costs of rights clearance. And in the last section, we built up DApp to integrate semantic licenses with contents using smart contracts and represent a semantic model of these deployments.
 }
 \end{abstract}
