--- a/MasterThesis/chapter3.tex
+++ b/MasterThesis/chapter3.tex
@@ -10,7 +10,7 @@ The following requirements would be addressed by the DALICC framework:\\
 	Combing licenses are simple if they are expressed through the same RELs. But, it is difficult to compare licenses that have been represented by different RELs.\\
 	DALICC resolves this problem, by representing RELs based on the semantic web and mapping the terms to each other. It will represent exiting RELs based on W3C-approved standards, thus allowing mapping between various RELs to be created.
 	\item \textit{Compatibility check, conflict detection and neutrality of the rules:} \\
-	It is difficult to be sure if the meaning of the different terms in semantics is aligned. These problems result from indicating the classes, instances, and properties which can not be handled just by mapping.\\
+	It is difficult to be sure the meaning of the different terms in semantics is aligned. These problems result from indicating the classes, instances, and properties which can not be handled just by mapping.\\
 	This is where DALICC comes to play and helps the user with a workflow that defines the usage context, then gathers additional information to detect conflicts and ambiguous concepts. Based on this information, DALICC makes reasoning over the set of licenses and infers the instruction to the user on how to process with license processing.\\
 	\item \textit{Legal validity of representations and machine recommendations:} \\
 	According to Anna Fensel et al.\cite{Anna}, The semantic complexity of licensing issues means that the semantics of RELs must be aligned within the specific application scenario. This includes a correct interpretation of the various national legislation according to the country of origin of a jurisdiction (i.e. German Urheberrecht vs. US copyright), the resolution of problems that are derived from multilingual, and the consideration of existing case law in the resolution of licensing conflicts.\cite{Anna}\\
