--- a/MasterThesis/introduction.tex
+++ b/MasterThesis/introduction.tex
@@ -1,10 +1,10 @@
 \section{Introduction}
-Distributed ledger on the blockchain has become the most popular in recent years. The features which make blockchain useful in cryptocurrency such as proof of consensus, secure transactions, transparently - also make it suitable in many other contexts like healthcare, social, supply chain management, etc. \\
-Ethereum blockchain is one of well-known ledgers which is capable to generate decentralized applications, and managing cryptocurrency using smart contracts. It has been the best platform for developers coding smart contracts in a decentralized paradigm to generate decentralized application DApp.
-A smart contract is code written in solidity program language, storing in blockchain and executing some functionality out of blockchain based on the terms of contract in the most trusted way. \\
-As blockchain has been widely used in diverse forms of data, the need of making queries over data, and indexing entries, become more important. The most important thing is integrating stored data on the blockchain with external resources, in the other words there is a need for linked data \cite{Third}. \\
-According to Tim-Berners-Lee (creator of the World Wide Web), 'linked data is the semantic web done right, and the web done right' \cite{Hector}. 
- Semantic web is a set of standards which enable access, integration, and query on data sources, and creates a variety of insight between different application domains. It uses ontology which represents Ethereum entities like blocks, and transactions to allow queries from the web using SPARQL and linking datasets \cite{Third}. \\
+Distributed ledger on the blockchain has become the most popular in recent years. The features which make blockchain useful in cryptocurrency such as proof of consensus, secure transactions, and transparently - also make it suitable in many other contexts like healthcare, social, supply chain management, etc. \\
+Ethereum blockchain is one of the well-known ledgers which is capable to generate decentralized applications, and managing cryptocurrency using smart contracts. It has been the best platform for developers coding smart contracts in a decentralized paradigm to generate decentralized application DApp.
+A smart contract is a code written in a solidity program language, stored in blockchain, and executing some functionality out of blockchain based on the terms of the contract in the most trusted way. \\
+As blockchain has been widely used in diverse forms of data, the need of making queries over data, and index entries, become more important. The most important thing is integrating stored data on the blockchain with external resources, in other words, there is a need for linked data \cite{Third}. \\
+According to Tim-Berners-Lee (creator of the World Wide Web), 'linked data is the semantic web done right, and the web done right'\cite{Hector}. 
+ The semantic web is a set of standards that enable access, integration, and query on data sources, and creates a variety of insight between different application domains. It uses ontology which represents Ethereum entities like blocks, and transactions to allow queries from the web using SPARQL and linking datasets \cite{Third}. \\
 In this thesis, we deal with some problems: First one is to find a method to integrate semantic licenses from the DAL ICC library into a smart contract. 
 DALICC stands for Data Licenses Clearance Center is a framework that supports automated clearance of rights to help detect license conflict and reduce the cost of high transactions related to manual clearance of licensing contents.
 It is developed and integrated into different functionalities that allow the automated clearance of rights issues \cite{Anna}.\\
